...
            }

            PhotoAlbumsView()
                .environmentObject(classroomViewModel)
                .environmentObject(albumViewModel)
                .tabItem {
                    Label("Albums", systemImage: "photo.on.rectangle.angled")
                }
                .tag(1)

            MessagesView()
                .environmentObject(authViewModel)
                .environmentObject(classroomViewModel)
...
